# imret

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  main.cpp  pyproject.toml
.github/workflows/: release.yml  tests.yml
bindings/python/: CMakeLists.txt  pyproject.toml
bindings/python/imret/: __init__.py  _core.pyi  core.py
bindings/python/src/: bind.cpp
bindings/python/tests/: test_vault.py
include/: extractor.hpp  imret.hpp  vault.hpp
src/: extractor.cpp  vault.cpp
tests/: CMakeLists.txt  test_extractor.cpp  test_vault.cpp
