[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "imret"
version = "0.1.0"
description = "Approximate image retrieval using ORB descriptors and FAISS IVF indexing."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "James Kelly", email = "mrkellyjam@gmail.com" }]
keywords = ["image retrieval", "computer vision", "ORB", "FAISS", "feature matching"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "opencv-python-headless>=4.5",
]

[project.urls]
Repository = "https://github.com/semajyllek/imret"

[tool.scikit-build]
cmake.source-dir = "bindings/python"
wheel.packages = ["bindings/python/imret"]

# ── cibuildwheel ──────────────────────────────────────────────────────

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-manylinux_i686 *-musllinux*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-all = """
curl -fsSL https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-x86_64.sh -o /tmp/miniforge.sh
bash /tmp/miniforge.sh -b -p /opt/conda
/opt/conda/bin/conda install -y -c conda-forge "faiss-cpu>=1.7" "libopencv>=4.5=*headless*"
"""
environment = { CMAKE_PREFIX_PATH = "/opt/conda", LD_LIBRARY_PATH = "/opt/conda/lib" }
repair-wheel-command = "auditwheel repair --plat manylinux_2_39_x86_64 -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["arm64"]
before-all = "brew install faiss opencv libomp"
environment = { MACOSX_DEPLOYMENT_TARGET = "15" }
