[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "imret"
version = "0.1.0"
description = "Edge-native exact image retrieval engine."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "faiss-cpu"
]

[tool.scikit-build]
# Point to the CMakeLists.txt inside the python bindings folder
cmake.source-dir = "."
